--- a/app.yaml
+++ b/app.yaml
@@ -12,29 +12,8 @@ handlers:
     secure: always
     redirect_http_response_code: 301
 
-  - url: /(.*)
-    static_files: docs/.vitepress/dist/\1
-    upload: www/(.*)
+  - url: /.*
+    static_files: docs/.vitepress/dist/index.html
+    upload: docs/.vitepress/dist/.*
     secure: always
     redirect_http_response_code: 301
-
-# env_variables:
-  # INSTANCE_CONNECTION_NAME: abs-intranet-236508:asia-east2:abs-intranet-database
-  # BUCKET_TRAINING: "abs-intranet-training"
-  # BUCKET_LOGISTICS: "abs-intranet-logistics"
-  # BUCKET_MMC: "abs-intranet-mmc"
-  # BUCKET_CMM: "abs-intranet-cmm"
-  # BUCKET_IMAGES: "abs-intranet-images"
-  # BUCKET_EMPLOYEES: "abs-intranet-employees"
-  # BUCKET_CONSUMABLES: "abs-intranet-consumables"
-  # BUCKET_QA: "abs-intranet-qa"
-  # BUCKET_PURCHASING: "abs-intranet-purchasing"
-  # CLOUDSQL_USER: "absUser"
-  # CLOUDSQL_PASSWORD: "pVXjBrQSRWZQd5nOnuEaozraquuOISsk"
-  # ABS_AUTH_MIDDLEWARE_NAME: "projects/abs-intranet-236508/secrets/ABS_PUBLIC_KEY/versions/latest"
-  # ABS_AUTH_MIDDLEWARE_REFRESH_TOKEN_URL: "https://auth-service-dot-abs-intranet-236508.df.r.appspot.com/auth/getuserfromrefreshtoken"
-
-# automatic_scaling:
-#   max_concurrent_requests: 80
-#   max_pending_latency: 8s
-#   min_pending_latency: 6s
