--- a/app.yaml
+++ b/app.yaml
@@ -12,8 +12,15 @@ handlers:
     secure: always
     redirect_http_response_code: 301
 
+  - url: /(.*)
+    static_files: docs/.vitepress/dist/\1
+    upload: www/(.*)
+    secure: always
+    redirect_http_response_code: 301
+
   - url: /.*
     static_files: docs/.vitepress/dist/index.html
     upload: docs/.vitepress/dist/.*
+    # script: auto
     secure: always
     redirect_http_response_code: 301
