--- a/app.yaml
+++ b/app.yaml
@@ -12,7 +12,7 @@ handlers:
     secure: always
     redirect_http_response_code: 301
 
-  - url: /(.*)
+  - url: /(.*\.(js|css))$
     static_files: docs/.vitepress/dist/\1
     upload: www/(.*)
     secure: always
