--- a/app.yaml
+++ b/app.yaml
@@ -6,14 +6,14 @@ service: documentation-service
 
 handlers:
   - url: /
-    static_files: docs/.vitepress/dist/index.html
+    static_files: docs/.vitepress/dist
     upload: docs/.vitepress/dist/.*
     # script: auto
     secure: always
     redirect_http_response_code: 301
 
   - url: /(.*\.(js|css))$
-    static_files: docs/.vitepress/dist/\1
+    static_files: docs/.vitepress/dist
     upload: www/(.*)
     secure: always
     redirect_http_response_code: 301
