--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "sass": "^1.49.7",
     "vitepress": "^1.0.0-alpha.45"
+  },
+  "dependencies": {
+    "firebase": "^9.17.1"
   }
 }
